# ml-agent

./: .gitignore  Dockerfile  ISOLATION_FIX_VERIFICATION.md  README.md  pyproject.toml  test_whoosh_search.py  testing.py
.claude-plugin/: marketplace.json
.github/workflows/: plugin-vendor-sync.yml
agent/: config.py  main.py  mcp_server.py
agent/context_manager/: manager.py
agent/core/: agent_loop.py  doom_loop.py  hf_access.py  llm_params.py  model_switcher.py  provider_adapters.py  provider_select.py  session.py  (+1 more)
backend/: dependencies.py  model_catalog.py  session_manager.py
configs/: frontend_agent_config.json
frontend/: package-lock.json
plugin/: .gitignore  .mcp.json  README.md  pyproject.toml
plugin/.claude-plugin/: plugin.json
plugin/agents/: research.md
plugin/commands/: finetune.md  inspect-dataset.md  run-job.md
plugin/hooks/: hooks.json  session_end_upload.py  session_start_context.py
plugin/lib/: mcp_server.py
plugin/lib/ml_intern_lib/: session_stub.py  telemetry_stub.py  tool_spec.py
plugin/lib/ml_intern_lib/tools/: __init__.py  dataset_tools.py  github_find_examples.py  github_list_repos.py  github_read_file.py  hf_repo_files_tool.py  hf_repo_git_tool.py  jobs_tool.py  local_tools.py  papers_tool.py  sandbox_tool.py
post_train_bench/: Dockerfile  README.md  collect_artifacts.py  launch.slurm  ml_intern_config.json  ml_intern_posttrain_config.json  run_judge.py  run_task_docker.sh  submit_eval_set.sh  system_prompt_posttrain.yaml
scripts/: sync_plugin_vendored.py
tests/: test_mcp_server.py  test_provider_adapters.py
(+34 files in other folders)
