[project]
name = "ml-intern-plugin"
version = "0.1.0"
description = "MCP server + vendored tools for the ml-intern Claude Code plugin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp>=1.0.0",
    "huggingface-hub>=1.0.1",
    "httpx>=0.27.0",
    "requests>=2.33.0",
    "thefuzz>=0.22.1",
    "whoosh>=2.7.4",
    "beautifulsoup4>=4.12.0",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
]

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["lib/ml_intern_lib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
